// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`turns a failing ava tests to Jest test result 1`] = `
Object {
  "console": null,
  "failureMessage": "  [1m[37mThis test failed[39m[22m
  [90m/path/to/file.js:12[39m

  Difference:

  - 1
  + 2
",
  "numFailingTests": 1,
  "numPassingTests": 0,
  "numPendingTests": 0,
  "perfStats": Object {
    "end": 946713600000.004,
    "start": 946713600000,
  },
  "skipped": false,
  "snapshot": Object {
    "added": 0,
    "fileDeleted": false,
    "matched": 0,
    "unchecked": 0,
    "unmatched": 0,
    "updated": 0,
  },
  "sourceMaps": Object {},
  "testExecError": null,
  "testFilePath": "path/to/file",
  "testResults": Array [
    Object {
      "ancestorTitles": Array [],
      "duration": 0.004,
      "failureMessages": "  [1m[37mThis test failed[39m[22m
  [90m/path/to/file.js:12[39m

  Difference:

  - 1
  + 2
",
      "fullName": "This test failed",
      "numPassingAsserts": 1,
      "status": "failed",
      "title": "This test failed",
    },
  ],
}
`;

exports[`turns a failing snapshot ava tests to Jest test result 1`] = `
Object {
  "console": null,
  "failureMessage": "  [1m[37mThis test failed with a snapshot[39m[22m
  [90m/path/to/file:16[39m

  Did not match snapshot

  Difference:

  - 'Foo BarBaz'
  + 'Foo Bar Baz'
",
  "numFailingTests": 1,
  "numPassingTests": 0,
  "numPendingTests": 0,
  "perfStats": Object {
    "end": 946713600000.002,
    "start": 946713600000,
  },
  "skipped": false,
  "snapshot": Object {
    "added": 0,
    "fileDeleted": false,
    "matched": 0,
    "unchecked": 0,
    "unmatched": 1,
    "updated": 0,
  },
  "sourceMaps": Object {},
  "testExecError": null,
  "testFilePath": "path/to/file",
  "testResults": Array [
    Object {
      "ancestorTitles": Array [],
      "duration": 0.002,
      "failureMessages": "  [1m[37mThis test failed with a snapshot[39m[22m
  [90m/path/to/file:16[39m

  Did not match snapshot

  Difference:

  - 'Foo BarBaz'
  + 'Foo Bar Baz'
",
      "fullName": "This test failed with a snapshot",
      "numPassingAsserts": 1,
      "status": "failed",
      "title": "This test failed with a snapshot",
    },
  ],
}
`;

exports[`turns a passing ava tests to Jest test result 1`] = `
Object {
  "console": null,
  "failureMessage": null,
  "numFailingTests": 0,
  "numPassingTests": 1,
  "numPendingTests": 0,
  "perfStats": Object {
    "end": 946713600000.001,
    "start": 946713600000,
  },
  "skipped": false,
  "snapshot": Object {
    "added": 0,
    "fileDeleted": false,
    "matched": 0,
    "unchecked": 0,
    "unmatched": 0,
    "updated": 0,
  },
  "sourceMaps": Object {},
  "testExecError": null,
  "testFilePath": "path/to/file",
  "testResults": Array [
    Object {
      "ancestorTitles": Array [],
      "duration": 0.001,
      "failureMessages": null,
      "fullName": "This test passes[1]",
      "numPassingAsserts": 0,
      "status": "passed",
      "title": "This test passes[1]",
    },
  ],
}
`;

exports[`turns a whole ava tests suite to Jest test result 1`] = `
Object {
  "console": null,
  "failureMessage": "  [1m[37mThis test failed with a snapshot[39m[22m
  [90m/path/to/file:16[39m

  Did not match snapshot

  Difference:

  - 'Foo BarBaz'
  + 'Foo Bar Baz'
",
  "numFailingTests": 2,
  "numPassingTests": 2,
  "numPendingTests": 0,
  "perfStats": Object {
    "end": 946713600000.011,
    "start": 946713600000,
  },
  "skipped": false,
  "snapshot": Object {
    "added": 0,
    "fileDeleted": false,
    "matched": 0,
    "unchecked": 0,
    "unmatched": 1,
    "updated": 0,
  },
  "sourceMaps": Object {},
  "testExecError": null,
  "testFilePath": "path/to/file",
  "testResults": Array [
    Object {
      "ancestorTitles": Array [],
      "duration": 0.001,
      "failureMessages": null,
      "fullName": "This test passes[1]",
      "numPassingAsserts": 0,
      "status": "passed",
      "title": "This test passes[1]",
    },
    Object {
      "ancestorTitles": Array [],
      "duration": 0.002,
      "failureMessages": "  [1m[37mThis test failed with a snapshot[39m[22m
  [90m/path/to/file:16[39m

  Did not match snapshot

  Difference:

  - 'Foo BarBaz'
  + 'Foo Bar Baz'
",
      "fullName": "This test failed with a snapshot",
      "numPassingAsserts": 1,
      "status": "failed",
      "title": "This test failed with a snapshot",
    },
    Object {
      "ancestorTitles": Array [],
      "duration": 0.004,
      "failureMessages": null,
      "fullName": "This test also passes[2]",
      "numPassingAsserts": 0,
      "status": "passed",
      "title": "This test also passes[2]",
    },
    Object {
      "ancestorTitles": Array [],
      "duration": 0.004,
      "failureMessages": "  [1m[37mThis test failed[39m[22m
  [90m/path/to/file.js:12[39m

  Difference:

  - 1
  + 2
",
      "fullName": "This test failed",
      "numPassingAsserts": 1,
      "status": "failed",
      "title": "This test failed",
    },
  ],
}
`;
